--- a/resources/scripts/publish_to_ilr.cfg
+++ b/resources/scripts/publish_to_ilr.cfg
@@ -7,7 +7,7 @@ ILR_USER=false
 ILR_PASS=false
 ILR_DOC='test3'                               #Name of CSD document we are publish to
 DHIS2_URL='https://localhost/dhis2'           #URL to access DHIS2
-DHIS2_EXT_URL=$DHIS2_URL                      #the externally accessible hostname of the DHIS2 instance
+DHIS2_EXT_URL='DHIS2_EXT_URL='https://www.datim.org <https://www.datim.org>' #the externally accessible hostname of the DHIS2 instance
 DHIS2_USER="admin"  
 DHIS2_PASS="district"
 DOUSERS=false                                 #Process DHIS2 Userss are Health workers
