Changes to groupcode and ilr_doc default values

--- a/resources/scripts/dhis2_demo.cfg
+++ b/resources/scripts/dhis2_demo.cfg
@@ -5,7 +5,7 @@
 ILR_URL='http://localhost:8984/CSD'           #URL for OpenInfoMan / ILR
 ILR_USER=false
 ILR_PASS=false
-ILR_DOC='DHIS2-Demo'                               #Name of CSD document we are publish to
+ILR_DOC='XXOU-Extract'                               #Name of CSD document we are publish to
 DHIS2_URL='https://apps.dhis2.org/demo'           #URL to access DHIS2
 DHIS2_EXT_URL=$DHIS2_URL                      #the externally accessible hostname of the DHIS2 instance
 DHIS2_USER="admin"  
@@ -14,4 +14,4 @@ DOUSERS=true                                 #Process DHIS2 Userss are Health wo
 DOSERVICES=true                               #Process DHIS2 Data Elements as services
 IGNORECERTS=true                              #Ignore cert checks
 LEVELS=(4 5 6 )                                    #levels of a facility.  Example: LEVELS=(3 4 5)
-GROUPCODES=( ) #Groups codes.  Example: GROUPS=(COMMUNITY FACILITY COUNTRY)
+GROUPCODES=(COMMUNITY FACILITY COUNTRY) #Groups codes.
