Added new group codes

--- a/resources/scripts/publish_to_ilr.cfg
+++ b/resources/scripts/publish_to_ilr.cfg
@@ -14,4 +14,4 @@ DOUSERS=false                                 #Process DHIS2 Userss are Health w
 DOSERVICES=true                               #Process DHIS2 Data Elements as services
 IGNORECERTS=true                              #Ignore cert checks
 LEVELS=( )                                    #levels of a facility.  Example: LEVELS=(3 4 5)
-GROUPCODES=('FACILITY' 'COMMUNITY' 'COUNTRY') #Groups codes.  Example: GROUPS=(COMMUNITY FACILITY COUNTRY)
+GROUPCODES=('FACILITY' 'COMMUNITY' 'COUNTRY' 'COP_PRIORITAZATION_SNU' 'OUSCOUNTRIES') #Groups codes.  Example: GROUPS=(COMMUNITY FACILITY COUNTRY)
